# ghc-mod-stack-wrapper

./: .gitignore  CabalConfigure.hs  GhcMod.hs  GhcModi.hs  LICENSE  README.md  ghc-mod-stack-wrapper.cabal  stack.yaml
linux/: ghc-mod  ghc-modi  stack-cabal-configure
win/: ghc-mod  ghc-mod.bat  ghc-modi  ghc-modi.bat  stack-cabal-configure  stack-cabal-configure.bat
