name:               ghc-mod-stack-wrapper
version:            0.1.0.0
synopsis:           stack wrapper for ghc-mod
description:        stack wrapper for ghc-mod
license:            BSD3
license-file:       LICENSE
author:             belliture
copyright:          (c) 2015 belliture
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable ghc-mod-stack-wrapper
  main-is:            GhcMod.hs
  ghc-options:        -O2 -Wall
  build-depends:      base
                    , process
  default-language:   Haskell2010

executable ghc-modi-stack-wrapper
  main-is:            GhcModi.hs
  ghc-options:        -O2 -Wall
  build-depends:      base
                    , process
  default-language:   Haskell2010

executable stack-cabal-configure
  main-is:            CabalConfigure.hs
  ghc-options:        -O2 -Wall
  build-depends:      base
                    , process
                    , text >= 1.0
  default-language:   Haskell2010
